src/snapshots/jfrview__export__tests__non-native, threads@recording.jfr.snap
---
source: src/export.rs
input_file: test-data/recording.jfr
---
JFR Periodic Tasks: (3)
| java.lang.Thread:run: (3)
| | jdk.jfr.internal.PlatformRecorder$$Lambda$55.205465701:run: (3)
| | | jdk.jfr.internal.PlatformRecorder:lambda$startDiskMonitor$1: (3)
| | | | jdk.jfr.internal.PlatformRecorder:periodicTask: (3)
| | | | | jdk.jfr.internal.PlatformRecorder:takeNap: (3)
