src/snapshots/jfrview__export__tests__parse_without_panic_native@heavy.jfr.snap
---
source: src/export.rs
description: "native, heavy.jfr"
input_file: test-data/heavy.jfr
snapshot_kind: text
---
Heavy:main: (346)
| java.util.stream.IntPipeline:toArray: (346)
| | java.util.stream.AbstractPipeline:evaluateToArrayNode: (346)
| | | java.util.stream.AbstractPipeline:evaluate: (346)
| | | | java.util.stream.AbstractPipeline:wrapAndCopyInto: (346)
| | | | | java.util.stream.AbstractPipeline:copyInto: (346)
| | | | | | java.util.stream.AbstractPipeline:copyIntoWithCancel: (346)
| | | | | | | java.util.stream.IntPipeline:forEachWithCancel: (39)
| | | | | | | | java.util.stream.SliceOps$2$1:cancellationRequested: (1)
| | | | | | | | java.util.stream.StreamSpliterators$InfiniteSupplyingSpliterator$OfInt:tryAdvance: (32)
| | | | | | | | | java.util.stream.SliceOps$2$1:accept: (7)
| | | | | | | | | | java.util.stream.SortedOps$IntSortingSink:accept: (7)
| | | | | | | | | | | java.util.stream.SpinedBuffer$OfInt:accept: (5)
| | | | | | | | | | | | java.util.stream.SpinedBuffer$OfPrimitive:preAccept: (5)
| | | | | | | | | Heavy$$Lambda+0x000001c39a007200.2136288211:getAsInt: (25)
| | | | | | | | | | java.util.Random:nextInt: (25)
| | | | | | | | | | | java.util.Random:next: (25)
| | | | | | | | | | | | java.util.concurrent.atomic.AtomicLong:compareAndSet: (25)
| | | | | | | java.util.stream.Sink$ChainedInt:end: (307)
| | | | | | | | java.util.stream.SortedOps$IntSortingSink:end: (307)
| | | | | | | | | java.util.Arrays:sort: (298)
| | | | | | | | | | java.util.DualPivotQuicksort:sort: (298)
| | | | | | | | | | | java.util.DualPivotQuicksort:sort: (298)
| | | | | | | | | | | | java.util.DualPivotQuicksort:sort: (285)
| | | | | | | | | | | | | java.util.DualPivotQuicksort:sort: (277)
| | | | | | | | | | | | | | java.util.DualPivotQuicksort:sort: (261)
| | | | | | | | | | | | | | | java.util.DualPivotQuicksort:sort: (255)
| | | | | | | | | | | | | | | | java.util.DualPivotQuicksort:sort: (241)
| | | | | | | | | | | | | | | | | java.util.DualPivotQuicksort:sort: (221)
| | | | | | | | | | | | | | | | | | java.util.DualPivotQuicksort:sort: (214)
| | | | | | | | | | | | | | | | | | | java.util.DualPivotQuicksort:sort: (202)
| | | | | | | | | | | | | | | | | | | | java.util.DualPivotQuicksort:sort: (190)
| | | | | | | | | | | | | | | | | | | | | java.util.DualPivotQuicksort:sort: (177)
| | | | | | | | | | | | | | | | | | | | | | java.util.DualPivotQuicksort:sort: (155)
| | | | | | | | | | | | | | | | | | | | | | | java.util.DualPivotQuicksort:sort: (139)
| | | | | | | | | | | | | | | | | | | | | | | | java.util.DualPivotQuicksort:sort: (125)
| | | | | | | | | | | | | | | | | | | | | | | | | java.util.DualPivotQuicksort:sort: (112)
| | | | | | | | | | | | | | | | | | | | | | | | | | java.util.DualPivotQuicksort:sort: (102)
| | | | | | | | | | | | | | | | | | | | | | | | | | | java.util.DualPivotQuicksort:sort: (83)
| | | | | | | | | | | | | | | | | | | | | | | | | | | | java.util.DualPivotQuicksort:sort: (72)
| | | | | | | | | | | | | | | | | | | | | | | | | | | | | java.util.DualPivotQuicksort:sort: (61)
| | | | | | | | | | | | | | | | | | | | | | | | | | | | | | java.util.DualPivotQuicksort:sort: (47)
| | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | java.util.DualPivotQuicksort:sort: (35)
| | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | java.util.DualPivotQuicksort:sort: (27)
| | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | java.util.DualPivotQuicksort:sort: (21)
| | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | java.util.DualPivotQuicksort:sort: (16)
| | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | java.util.DualPivotQuicksort:sort: (11)
| | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | java.util.DualPivotQuicksort:sort: (8)
| | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | java.util.DualPivotQuicksort:sort: (5)
| | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | java.util.DualPivotQuicksort:sort: (2)
| | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | java.util.DualPivotQuicksort:sort: (2)
| | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | java.util.DualPivotQuicksort:sort: (2)
| | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | java.util.DualPivotQuicksort:mixedInsertionSort: (1)
| | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | java.util.DualPivotQuicksort:sort: (1)
| | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | java.util.DualPivotQuicksort:mixedInsertionSort: (1)
| | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | java.util.DualPivotQuicksort:mixedInsertionSort: (2)
| | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | java.util.DualPivotQuicksort:mixedInsertionSort: (3)
| | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | java.util.DualPivotQuicksort:mixedInsertionSort: (1)
| | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | java.util.DualPivotQuicksort:mixedInsertionSort: (5)
| | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | java.util.DualPivotQuicksort:mixedInsertionSort: (4)
| | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | java.util.DualPivotQuicksort:mixedInsertionSort: (4)
| | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | java.util.DualPivotQuicksort:mixedInsertionSort: (4)
| | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | java.util.DualPivotQuicksort:mixedInsertionSort: (7)
| | | | | | | | | | | | | | | | | | | | | | | | | | | | | | java.util.DualPivotQuicksort:mixedInsertionSort: (8)
| | | | | | | | | | | | | | | | | | | | | | | | | | | | | java.util.DualPivotQuicksort:mixedInsertionSort: (6)
| | | | | | | | | | | | | | | | | | | | | | | | | | | | java.util.DualPivotQuicksort:mixedInsertionSort: (6)
| | | | | | | | | | | | | | | | | | | | | | | | | | | java.util.DualPivotQuicksort:mixedInsertionSort: (8)
| | | | | | | | | | | | | | | | | | | | | | | | | | java.util.DualPivotQuicksort:mixedInsertionSort: (6)
| | | | | | | | | | | | | | | | | | | | | | | | | java.util.DualPivotQuicksort:mixedInsertionSort: (3)
| | | | | | | | | | | | | | | | | | | | | | | | java.util.DualPivotQuicksort:mixedInsertionSort: (6)
| | | | | | | | | | | | | | | | | | | | | | | java.util.DualPivotQuicksort:mixedInsertionSort: (4)
| | | | | | | | | | | | | | | | | | | | | | java.util.DualPivotQuicksort:mixedInsertionSort: (6)
| | | | | | | | | | | | | | | | | | | java.util.DualPivotQuicksort:mixedInsertionSort: (2)
| | | | | | | | | java.util.stream.Nodes$IntSpinedNodeBuilder:accept: (5)
| | | | | | | | | | java.util.stream.SpinedBuffer$OfInt:accept: (5)
| | | | | | | | | | | java.util.stream.SpinedBuffer$OfPrimitive:preAccept: (5)
java.lang.Thread:run: (44)
| java.lang.Thread:runWith: (44)
| | jdk.jfr.internal.PlatformRecorder$$Lambda+0x000001c39a042338.1457410641:run: (44)
| | | jdk.jfr.internal.PlatformRecorder:lambda$startDiskMonitor$1: (44)
| | | | jdk.jfr.internal.PlatformRecorder:periodicTask: (44)
| | | | | jdk.jfr.internal.periodic.PeriodicEvents:doPeriodic: (44)
| | | | | | jdk.jfr.internal.periodic.PeriodicTask:run: (44)
| | | | | | | jdk.jfr.internal.periodic.JVMEventTask:execute: (44)
| | | | | | | | jdk.jfr.internal.JVM:emitEvent: (44)
